--- a/kubernetes/apps/cert-manager/cert-manager/issuers/certs.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/certs.yaml
@@ -3,6 +3,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: "${SECRET_DOMAIN}-prod-cert"
+  namespace: networking
 spec:
   secretName: "${SECRET_DOMAIN}-prod-tls"
   subject:
