--- a/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: traefik-forward-auth
-  namespace: networking
+#  namespace: networking
 spec:
   interval: 5m
   chart:
@@ -15,22 +15,26 @@ spec:
         name: k8s-at-home-charts
         namespace: flux-system
       interval: 5m
-  dependsOn:
-    - name: traefik
-      namespace: networking
+  # dependsOn:
+  #   - name: traefik
+  #     namespace: networking
   values:
     image:
-      fullnameOverride: traefik-forward-auth
+      #fullnameOverride: traefik-forward-auth
+      name: traefik-forward-auth
       repository: thomseddon/traefik-forward-auth
       tag: 2.2.0
       pullPolicy: IfNotPresent
-    middleware:
-      enabled: true
-    service:
-      main:
-        ports:
-          http:
-            port: 4181
+      ports:
+        - containerPort: 4181
+          protocol: TCP
+    # middleware:
+    #   enabled: true
+    # service:
+    #   main:
+    #     ports:
+    #       http:
+    #         port: 4181
     env:
       AUTH_HOST: "auth.${SECRET_DOMAIN}"
       LIFETIME: "6048002592000" #30 days
