--- a/kubernetes/apps/networking/traefik/app/kustomization.yaml
+++ b/kubernetes/apps/networking/traefik/app/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 namespace: networking
 resources:
   - ./helmrelease.yaml
+  - .helmrelease-forward-auth.yaml
   - ./ingress-routes.yaml
   - ./middleware.yaml
   - ./service.yaml
