--- a/kubernetes/apps/networking/traefik/app/service.yaml
+++ b/kubernetes/apps/networking/traefik/app/service.yaml
@@ -37,6 +37,6 @@ spec:
   selector:
     app: traefik
   ports:
-    - name: auth-http
+    - name: traefik-forward-auth
       port: 4181
       targetPort: 4181
