--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   - ./traefik/ks.yaml
   - ./k8s-gateway/ks.yaml
   - ./metallb/ks.yaml
-  # - ./traefik-forward-auth/ks.yaml
+  - ./traefik-forward-auth/ks.yaml
