--- a/kubernetes/apps/networking/traefik/app/ingress-routes.yaml
+++ b/kubernetes/apps/networking/traefik/app/ingress-routes.yaml
@@ -4,6 +4,8 @@ kind: IngressRoute
 metadata:
   name: web
   namespace: networking
+  labels:
+    app: traefik
 spec:
   entryPoints:
     - web
@@ -16,46 +18,46 @@ spec:
           name: noop@internal
       middlewares:
         - name: traefik-middleware-redirect-https
-#
-# Auth Ingress
-#
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: IngressRoute
+metadata:
+  name: traefik
+  namespace: networking
+  labels:
+    app: traefik
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`traefik.${SECRET_DOMAIN}`) #&& (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
+      services:
+        - kind: TraefikService
+          name: api@internal
+      middlewares:
+        - name: traefik-middleware-chains-oauth
+  tls:
+    secretName: "${SECRET_DOMAIN}-prod-cert"
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: traefik-forward-auth
+  namespace: networking
   labels:
     app: traefik
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
-    - match: Host(`auth.${SECRET_DOMAIN}`)
-      kind: Rule
+    - kind: Rule
+      match: Host(`auth.${SECRET_DOMAIN}`)
       services:
         - name: traefik-forward-auth
+          namespace: networking
           port: 4181
-  tls:
-    secretName: "${SECRET_DOMAIN}-prod-cert"
-
----
-#
-# Dash Ingress
-#
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRoute
-metadata:
-  name: traefik-dashboard
-  labels:
-    app: traefik
-spec:
-  entryPoints:
-    - web
-  routes:
-    - match: Host(`traefik.${SECRET_DOMAIN}`)
-      kind: Rule
-      services:
-        - name: api@internal
-          kind: TraefikService
+      middlewares:
+        - name: traefik-middleware-oauth
   tls:
     secretName: "${SECRET_DOMAIN}-prod-cert"
