--- a/kubernetes/apps/networking/traefik/app/ingress-routes.yaml
+++ b/kubernetes/apps/networking/traefik/app/ingress-routes.yaml
@@ -39,7 +39,7 @@ spec:
         # - name: traefik-middleware-chains-oauth
         - name: traefik-middleware-redirect-https
   tls:
-    secretName: "${SECRET_DOMAIN}-prod-cert"
+    secretName: "${SECRET_DOMAIN}-prod-tls"
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
@@ -62,4 +62,4 @@ spec:
         - name: traefik-middleware-redirect-https
         # - name: traefik-middleware-oauth
   tls:
-    secretName: "${SECRET_DOMAIN}-prod-cert"
+    secretName: "${SECRET_DOMAIN}-prod-tls"
