--- a/kubernetes/apps/networking/whoami/deployment.yaml
+++ b/kubernetes/apps/networking/whoami/deployment.yaml
@@ -41,7 +41,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: whoamiv1
-  namespace: app
+  namespace: networking
 spec:
   ports:
     - name: http
