--- a/kubernetes/apps/networking/whoami/app/deployment.yaml
+++ b/kubernetes/apps/networking/whoami/app/deployment.yaml
@@ -1,10 +1,15 @@
 ---
-kind: Deployment
-apiVersion: apps/v1
+# kind: Deployment
+# apiVersion: apps/v1
+# metadata:
+#   name: whoamiv1
+#   labels:
+#     name: whoamiv1
+#   namespace: networking
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
 metadata:
-  name: whoamiv1
-  labels:
-    name: whoamiv1
+  name: whoami
   namespace: networking
 spec:
   replicas: 1
