--- a/kubernetes/apps/default/echo-server/app/ingress-route.yaml
+++ b/kubernetes/apps/default/echo-server/app/ingress-route.yaml
@@ -9,7 +9,7 @@ spec:
   entryPoints:
     - web
   routes:
-    - match: Host(`echo.${SECRET_DOMAIN}`)
+    - match: Host(`echo-server.${SECRET_DOMAIN}`)
       kind: Rule
       services:
         - name: echo-server
