--- a/kubernetes/apps/networking/traefik/app/service.yaml
+++ b/kubernetes/apps/networking/traefik/app/service.yaml
@@ -5,29 +5,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: traefik
+  name: traefik-dashboard
   labels:
     app.kubernetes.io/instance: traefik
     app.kubernetes.io/name: traefik
-annotations:
-  metallb.universe.tf/loadBalancerIPs: |-
-    ${METALLB_INGRESS_ADDR}
 spec:
   selector:
     app.kubernetes.io/instance: traefik
     app.kubernetes.io/name: traefik
   type: LoadBalancer
-  loadBalancerIP: "${TRAEFIK_SERVICE_ADDR}"
   externalTrafficPolicy: Local
   ports:
-    - port: 80
-      name: web
-      targetPort: web
-      protocol: TCP
-    - port: 443
-      name: websecure
-      targetPort: websecure
-      protocol: TCP
+    - port: 8080
+      targetPort: 4181
 # ---
 #
 # Auth Service
