--- a/kubernetes/apps/networking/traefik/app/service.yaml
+++ b/kubernetes/apps/networking/traefik/app/service.yaml
@@ -2,17 +2,17 @@
 # Traefik Service
 #
 ---
-apiVersion: v1
-kind: Service
-metadata:
-  name: traefik-dashboard
-  labels:
-    app.kubernetes.io/instance: traefik
-    app.kubernetes.io/name: traefik
-spec:
-  ports:
-    - port: 8080
-      targetPort: 8080
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: traefik-dashboard
+#   labels:
+#     app.kubernetes.io/instance: traefik
+#     app.kubernetes.io/name: traefik
+# spec:
+#   ports:
+#     - port: 8080
+#       targetPort: 8080
 # ---
 #
 # Auth Service
