--- a/kubernetes/apps/networking/traefik/app/middleware.yaml
+++ b/kubernetes/apps/networking/traefik/app/middleware.yaml
@@ -156,7 +156,7 @@ metadata:
 spec:
   chain:
     middlewares:
-      - name: traefik-middleware-local-ips
+      #- name: traefik-middleware-local-ips
       - name: traefik-middleware-cloudflare-ips
       - name: traefik-middleware-rate-limit
       - name: traefik-middleware-secure-headers
