--- a/kubernetes/apps/networking/kustomization.yaml
+++ b/kubernetes/apps/networking/kustomization.yaml
@@ -9,5 +9,7 @@ resources:
   - ./traefik/ks.yaml
   - ./k8s-gateway/ks.yaml
   - ./metallb/ks.yaml
-  #- ./traefik-forward-auth/ks.yaml
+  - traefik-forward-auth
+  - ./traefik-forward-auth/ks.yaml
+  - wildcard-certificate
   #- ./whoami/ks.yaml
