--- a/kubernetes/apps/networking/traefik-forward-auth/ks.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/ks.yaml
@@ -7,8 +7,8 @@ metadata:
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
-  dependsOn:
-    - name: cluster-apps-ingress-traefik
+  # dependsOn:
+  #   - name: cluster-apps-ingress-traefik
   path: ./kubernetes/apps/networking/traefik-forward-auth/app
   prune: true
   sourceRef:
