--- a/kubernetes/apps/flux-system/addons/webhooks/github/ingress.yaml
+++ b/kubernetes/apps/flux-system/addons/webhooks/github/ingress.yaml
@@ -10,7 +10,7 @@ metadata:
     external-dns.home.arpa/enabled: "true"
     hajimari.io/enable: "false"
 spec:
-  ingressClassName: nginx
+  ingressClassName: traefik
   rules:
     - host: &host "flux-receiver.${SECRET_DOMAIN}"
       http:
