--- a/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/traefik-forward-auth/app/helmrelease.yaml
@@ -15,9 +15,9 @@ spec:
         name: k8s-at-home-charts
         namespace: flux-system
       interval: 5m
-  dependsOn:
-    - name: traefik
-      namespace: networking
+  # dependsOn:
+  #   - name: traefik
+  #     namespace: networking
   values:
     controller:
       replicas: 2
